--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "framer-motion": "^6.5.1",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   }
